fixed animation mobile

--- a/src/Intro/style/intro.css
+++ b/src/Intro/style/intro.css
@@ -31,6 +31,6 @@
 
   #tsparticles {
     width: 100%;
-    height: 70%;
+    height: 60vh;
   }
 }
